ACMW-0063: Fixed spacing between tabs on mobile

--- a/src/components/programs/Programs.css
+++ b/src/components/programs/Programs.css
@@ -91,4 +91,7 @@
     .disclaimer-body {
         padding-right: 5px;
     }
+    .flex-column {
+        padding-bottom: 35px;
+    }
   }
